feat(server): cache handlers
